# split_one

./: Cargo.toml  README.md
src/: lib.rs
